--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "avr",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "avr project tools",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin" : {
+    "avr" : "/index.js"
   },
   "repository": {
     "type": "git",
